# life

./: .gitignore  CNAME  Cargo.nix  Cargo.toml  README.md  config.toml  dec.md  flake.nix  index.html  index.js  justfile  link.txt  package-lock.json  result-bin  rust-analyzer.json  rust-toolchain.toml  save.json  shell.nix  worker.js
.github/workflows/: pages.yml
hexchess-core/: Cargo.toml
hexchess-core/src/game/: mod.rs  saving.rs
hexchess-core/src/platform_impl/web/: mod.rs
hexchess-core/src/render/: shader.wgsl
hexchess-server/: Cargo.toml
life/: Cargo.toml
life/src/: bg.wgsl  game.rs  lib.rs  main.rs  render.rs  shader.wgsl
life/src/game/: mod.rs  saving.rs
life/src/game/saving/: mod.rs  native.rs  web.rs
life/src/platform_impl/: mod.rs  native.rs  web.rs
life/src/platform_impl/native/: mod.rs
life/src/platform_impl/web/: mod.rs
life/src/render/: bg.wgsl  gui.rs  intro.md  mod.rs  shader.wgsl  texture.rs
pixel-art/: 6587563.ai  6587564.eps  pixel-art.xcf
server/: Cargo.toml
server/src/: main.rs
src/: game.rs  lib.rs  main.rs  render.rs  shader.wgsl
vec2/: Cargo.toml
vec2/src/: lib.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
