[package]
name = "hexchess-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
winit = { version = "0.29", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-csd-adwaita"] }
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.15.0", features = ["derive"] }
anyhow = "1.0"
# cfg-if = "1.0"
# itertools = "0.12.1"
rustc-hash = "1.1"
egui = { version = "0.27", features = ["log"] }
epi = "0.17"
egui_winit_platform = "0.22"
egui_wgpu_backend = "0.29"
egui_plot = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cfg-if = "1"
egui_commonmark = { version = "0.16.1", features = ["macros"] }
web-time = "1.1.0"
thiserror = "1.0.63"
web-sys = { version = "0.3.69", features = ["Storage"] }
wasm-bindgen = "0.2"
js-sys = "0.3.70"
bincode = "1.3.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-worker = "0.5"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.69", features = ["Window", "Document", "Element", "Screen"] }
wgpu = { version = "0.20", features = ["webgl"] }
console_log = "1.0.0"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.20"
