[package]
name = "life"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.15.0", features = ["derive"] }
# cgmath = "0.18"
anyhow = "1.0"
cfg-if = "1.0"
itertools = "0.12.1"
vec2 = { path = "../vec2" }
rustc-hash = "1.1"
