[package]
name = "life"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-csd-adwaita"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.19"
tokio = { version = "1.37", features = ["sync", "rt", "macros"] }
bytemuck = { version = "1.15.0", features = ["derive"] }
anyhow = "1.0"
cfg-if = "1.0"
itertools = "0.12.1"
vec2 = { path = "../vec2" }
rustc-hash = "1.1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[features]
default = [native]
native = [threading]
threading = ["tokio/rt-multi-thread"]
