[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
clap = { version = "4.5.7", features = ["derive"] }
